--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'application'
 	id 'org.springframework.boot' version '2.7.5'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
@@ -7,6 +8,15 @@ plugins {
 group = 'org.deblock'
 version = '0.0.1'
 sourceCompatibility = '17'
+
+apply plugin : 'java'
+ext {
+	javaMainClass = 'org.deblock.exercise.ExerciseApplication'
+}
+
+application {
+	mainClassName = javaMainClass
+}
 
 configurations {
 	compileOnly {
@@ -24,6 +34,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
 }
 
 tasks.named('test') {
