--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.4.0'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
 }
-
-tasks.named('test') {
+test {
+	testLogging {
+		outputs.upToDateWhen {false}
+		showStandardStreams = true
+	}
 	useJUnitPlatform()
 }
