--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
 test.server.port=8089
-mock.base.url="flights/api"
-crazyair.baseURL="http://crazyair.com"
-toughjet.baseURL="http://toughjet.co"
+mock.base.url=flights/api
+crazyair.baseURL=http://crazyair.com
+toughjet.baseURL=http://localhost:9090
